[tool.poetry]
name = "nonebot-plugin-today-in-history"
version = "0.1.1"
description = "Send Today In History to friends or group chat"
authors = ["AquamarineCyan <1057424730@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
nonebot2 = "^2.1.2"
nonebot-adapter-onebot = "^2.3.1"
nonebot-plugin-apscheduler = "^0.2.0"
nonebot-plugin-htmlrender = "^0.2.0"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"